fix: set UserCard z-index to a high number

--- a/client/src/components/UserCard/user-card.scss
+++ b/client/src/components/UserCard/user-card.scss
@@ -1,4 +1,5 @@
 .user-card {
+  z-index: 999;
   position: relative;
   padding: 0.3125rem;
   border-radius: 0.3125rem;
